# qn3svm

./: PKG-INFO  README.md  pyproject.toml  setup.py
qns3vm/: __init__.py  __main__.py  tools.py
qns3vm/datasets/: examples.py
src/qns3vm/: __main__.py
src/qns3vm/datasets/: __init__.py
