[tool.poetry]
name = "qns3vm"
version = "0.1.26"
description = ""
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
numpy = "^1.23.5"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"
scikit-learn = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
