[project]
name = "qns3vm"
version = "0.1.41"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]
authors = [
    {"name" = "Kotaro SONODA", "email" = "kotaro1976@gmail.com"}
]
keywords = ['QN-S3VM']

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

